# churn-guardian

./: .pre-commit-config.yaml  README.md  ROADMAP.md  Taskfile.yml  eda_findings.md  main.py  pyproject.toml
.github/workflows/: lint.yml
app/core/: __init__.py  config.py  logger.py
app/data/processed/: automl_baseline_model.joblib  preprocessor.joblib  train_processed.csv  train_processed.joblib  val_processed.joblib
app/data/raw/customer-churn-prediction-2020/: details.txt
app/reports/: eda_feature_screening.json  eda_summary.json
app/reports/plots/business/: executive_summary.json
app/scripts/: run_eda.py
app/scripts/eda/: __init__.py  business.py  dimensionality.py  feature_engineering.py  loader.py  missingness.py  outliers.py  plots.py  summarization.py
app/services/: __init__.py  data_loader.py  model_loader.py
app/tests/unit/: test_data_loader.py
app/utils/: decorators.py
